--- a/modelos_de_volatilidad.Rmd
+++ b/modelos_de_volatilidad.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "NASDAQ Composite"
-subtitle: "Trabajo Final - Modelos de Volatilidad - Financial Statistics"
+title: "NASDAQ Composite Index"
+subtitle: "Final Project - Volatility Models - Financial Statistics"
 author: "Alexander J Ohrt"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: 
@@ -14,19 +14,17 @@ output:
   pdf_document:
     fig_caption: true
     number_sections: true
+    toc: false
 editor_options: 
   chunk_output_type: console
 geometry:
-  margin = 2.5cm
+  margin = 2.2cm
 urlcolor: blue
 ---
 
-\tableofcontents
-\newpage
-
 ```{r setup, include=FALSE}
 rm(list = ls())
-knitr::opts_chunk$set(echo = F, warning = F, fig.width = 10, comment = "#>")
+knitr::opts_chunk$set(echo = T, warning = F, fig.width = 10, comment = "#>", size = "footnotesize")
 setwd("/home/ajo/gitRepos/finance")
 library(quantmod)
 library(fBasics)
@@ -38,10 +36,15 @@ library(latex2exp)
 library(ggplot2)
 library(tidyverse)
 library(rmgarch)
+def.chunk.hook  <- knitr::knit_hooks$get("chunk")
+knitr::knit_hooks$set(chunk = function(x, options) {
+  x <- def.chunk.hook(x, options)
+  ifelse(options$size != "normalsize", paste0("\n \\", options$size,"\n\n", x, "\n\n \\normalsize"), x)
+})
 ```
 
 # Abstract
-The mean and conditional variance of the NASDAQ Composite index are modelized. The work shows that ...
+The NASDAQ Composite Index (IXIC) is studied using data from 01.01.2012 to 01.03.2022. The mean and conditional variance of the series are modelized. The work shows that (SUMMARY 100 words).
 
 MAKE REFERENCES BETWEEN PLOTS (NUMBERS AND CITATIONS IN TEXT, bookdown is necessary maybe?) LATER. 
 
@@ -53,13 +56,22 @@ Describe
 * Precise description of variable (NASDAQ Composite) used in the analysis and description of where the data is gathered from (Yahoo Finance)
 * Summary of structure of the work (description of what is done in each part)
 
-The data is gathered directly from Yahoo Finance and can be found [here](https://finance.yahoo.com/quote/%5EIXIC?p=%5EIXIC).
+The NASDAQ Composite Index (IXIC) is analyzed from 01.01.2012 to 01.03.2022 (2556 days of data). The data is downloaded from Yahoo Finance and can be found [here](https://finance.yahoo.com/quote/%5EIXIC?p=%5EIXIC). As NASDAQ explains in this [article](https://www.nasdaq.com/articles/what-is-the-nasdaq-composite-and-what-companies-are-in-it-2021-05-12) "The Nasdaq Composite Index, popularly referred to as ‘The Nasdaq’ by the media, covers more than 3,000 stocks, all of which are listed on the Nasdaq Stock Market". It is a market-cap weighted index, such that it represents the value of all its listed stocks. Moreover, technology dominates almost half of the composite weight. 
+
+As noted, the data is downloaded from [Yahoo Finance](https://finance.yahoo.com/). This is a free portal that aggregates financial information like market news, stock prices, personal finance information, portfolio management resources and much more. 
+
+The mean and conditional variance of the financial time series are modelized, in order to study its volatility. The volatility models can be used to learn several things about the index. First of all, they can be used to predict and interpret future volatility. Additionally, they can be used to interpret the impact of news on the index. Moreover, they can be used to calculate the Value at Risk (VaR). All of these applications are shown in this work. Finally, a multivariate analysis is done, explicitly including the stock of Stratus Properties Inc. (STRS), in order to study some multivariate properties between the two financial time series. Note that STRS is one of the top [30 components](https://finance.yahoo.com/quote/%5EIXIC/components?p=%5EIXIC) of IXIC. 
+
+The table of contents is shown below. The rest of the report is split into a univariate part and a multivariate part, where the univariate part is the largest and most detailed. Part 3.1 loads and describes the data in a concise fashion, detailing some events that may be related to the changes in the daily adjusted closing price. Section 3.2 analyzes the stationarity of the series, which leads to the conclusion that IXIC is in fact non-stationary. The returns of the series are stationary however, which means that they are used in the remainder of the work instead. Section 3.3 presents some basic statistical properties of the returns. Section 3.4 and 3.5 build models for the mean and variance, respectively, of the stationary series. Section 3.6 presents a grafic and interpretation of the volatility series estimated by the model found in previous sections, while section 3.7 shows the news impact curve of the modelized series. Part 3.8 does volatility predictions and interpretations, based on the models estimated previously. Section 3.9 calculates volatility with two other methods which have not been used earlier in the work; historical volatility and Exponentially Weighted Moving Average (EWMA). Finally in section 3, part 3.10 calculates and interprets the Value at Risk (VaR). The second main part of the report treats a multivariate analysis of IXIC, coupled with STRS. In section 4.1 a multivariate DCC GARCH model is fitted to the residuals of the time series. In this case, the identification, estimation and diagnostics for the models of for the mean and variance of the residuals of STRS is not shown. Section 4.2 estimates the correlation between the two financial series and shows the news impact surface, which is the bivariate equivalent to the news impact curve. Finally, a conclusion of the work is formulated. 
 
 \newpage
-# Empirical Application
+\tableofcontents
 
-## Load Data 
-First, we load the NASDAQ Composite data from Yahoo Finance. Note that I downloaded the data in csv format instead of loading directly via the `getSymbols` API, just be to be sure that I always have access to the data. 
+\newpage
+# Univariate Analysis
+
+## Description of Data
+First, we load the NASDAQ Composite Index data from Yahoo Finance. Note that I downloaded the data in csv format instead of loading directly via the `quantmod` `getSymbols` API, in order to make sure that I always have access to the data. 
 
 ```{r, echo = F}
 options("getSymbols.warning4.0"=FALSE)
@@ -72,14 +84,14 @@ Ixic <- read.csv("IXIC.csv", )
 dim(Ixic) 
 any(is.na(Ixic))
 #dim(IXIC)
-# Want the adjusted closed data.
+# Want the adjusted closing price. 
 ixic <- Ixic[,6]
 #IXIC <- IXIC[,6]
 ```
 
-The data does not have any NA values (Weekends and holidays have been removed already), we can start working with the data directly. 
+The data does not have any NA values (weekends and holidays have been removed already), such that we can start working with the data without the need to replace missing values. The series is plotted below. 
 
-```{r}
+```{r, echo = F}
 tibble("date" = as.Date(Ixic[,1]), ixic) %>% ggplot(aes(x = date, y = ixic)) +
     geom_line() +
     theme_minimal() +
@@ -87,59 +99,58 @@ tibble("date" = as.Date(Ixic[,1]), ixic) %>% ggplot(aes(x = date, y = ixic)) +
     ggtitle("NASDAQ Composite (^IXIC)")
 ```
 
-COMMENT: DRAW SOME HAPPENINGS IN THE SERIES (Covid March 2020 and Russia-Ukraine in Feb 2022 + leading up to Feb in the beginning of 2022). Did something happen in Jan 2019 in the US (with tech-companies?) Did something happen in Jan 2016 (small regression).
-
+We note some important moments during the time in question. The index fell in January 2016, perhaps in relation to the [2015-2016 stock market sellof](https://en.wikipedia.org/wiki/2015%E2%80%932016_stock_market_selloff) or a slowdown in China and falling oil prices, as noted [here](https://money.cnn.com/2016/01/29/investing/dow-january-2016-worst-month/). In January 2019 there was a stock market crash following an [announcement](https://finance.yahoo.com/news/stock-market-news-jan-4-145702705.html) from Apple's CEO Tim Cook. Moreover, the market slump was dependent on weak Chinese manufacturing data, as noted [here](https://www.theguardian.com/business/live/2019/jan/02/stocks-start-2019-in-retreat-as-china-factory-output-shrinks-business-live). The relatively large fall in price in the beginning of 2020 was a result of the spread of COVID-19. This event leads up to the fall in the beginning of 2022, when Russia eventually launched an invasion on Ukraine on February 24. 
 
 ## Analysis of Stationarity
-In order to see if the series is stationary, we will employ both informal and formal tests. Immediately, by looking at the plot above (reference later), the series does not look stationary, since the mean of the process looks to change quite dramatically with time. Some more informal tests are done. The function of autocorrelation and partial autocorrelation (empirical) for the series are plotted below. 
+In order to see if the series is stationary, we will employ both informal and formal tests. Immediately, by looking at the plot of the series, it does not look stationary, since the mean of the process looks to change quite dramatically with time. Some more informal tests are done. The function of autocorrelation and partial autocorrelation (empirical) for the series are plotted below. 
 
-```{r}
+```{r, echo = F}
 par(mfrow=c(1,2),font=2,font.lab=4,font.axis=2,las=1) 
 acf(ixic,ylim=c(-1,1),main="ixic")
 pacf(ixic,ylim=c(-1,1),main="ixic")
 ```
 
-As is seen from the function of autocorrelation (ACF), the coefficients decrease slowly. This suggests that the time series is non-stationary, since a stationary series would show exponentially decreasing coefficients in the ACF. 
+As is seen from the function of autocorrelation (ACF), the coefficients decrease slowly towards zero. This suggests that the time series is non-stationary, since a stationary series would show quickly decreasing autocorrelation coefficients. 
 
-SJEKK AT ALT DETTE GIR MENING (OG BRUKER KORREKTE BEGREPER) SENERE! (TIL SLUTT)
-
-Next, some Ljung-Box tests are done. Here we are testing the joint hypothesis that all $m$ of the correlation coefficients are simultaneously equal to zero. Below we are testing for $m \in \{1, 5, 10, 15, 20\}$. 
-
-MAKE A SUMMARY-TABLE HERE INSTEAD LATER! JUST SHOW THE LAGS AND THE P-VALUES.
+Next, some Ljung-Box tests are done. Here we are testing the joint hypothesis that all $m$ of the correlation coefficients are simultaneously equal to zero. Below we are testing for $m \in \{1, 5, 10, 15, 20\}$. Only the first output is shown, because all of them give very low $p$-values. 
 
 ```{r}
 Box.test(ixic, lag = 1, type = c("Ljung-Box"))
+```
+
+```{r, eval = F}
 Box.test(ixic, lag = 5, type = c("Ljung-Box"))
 Box.test(ixic, lag = 10, type = c("Ljung-Box"))
 Box.test(ixic, lag = 15, type = c("Ljung-Box"))
 Box.test(ixic, lag = 20, type = c("Ljung-Box"))
 ```
 
-All the $p$-values from the Ljung-Box tests are low, which means that we would reject the null hypothesis that all $m$ correlation coefficients are simultaneously equal to zero. This further suggests that the series is non-stationary.
+The low $p$-values mean that, to any reasonably chosen significance level (often at 5\%), the null hypothesis that all $m$ correlation coefficients are simultaneously equal to zero is rejected. This further suggests that the series is non-stationary. 
 
-Next, some formal tests are done to check stationarity of the series. First, the Augmented-Dickey-Fuller (ADF) unit root test is done. The null hypothesis for this case states that the series is integrated of order 1, i.e. that it is non-stationary. Below, the ADF test is done assuming both a stochastic and deterministic trend in the data. The maximum number of lags considered are 20 and the number of lags used are chosen by BIC. 
+Next, some formal tests are done to check stationarity of the series. First, the Augmented-Dickey-Fuller (ADF) unit root test is done. The null hypothesis for this test states that the series is integrated of order 1, i.e. that it is non-stationary. Below, the ADF test is done assuming both a stochastic and deterministic trend in the data. The maximum number of lags considered are 20 and the number of lags used are chosen by BIC. 
 
 ```{r}
 ixic.df<-ur.df(ixic, type = c("trend"), lags=20, selectlags = c("BIC"))
 summary(ixic.df)	
 ```
 
-From the output it is apparent that BIC chooses 9 lags in the DF test. Moreover, the value of the test-statistic clearly suggests that we cannot reject the null-hypothesis, since the value is much larger than the critical values for this left-sided test. Thus, we would conclude that the series is non-stationary. Note that the test leads to the same conclusion when assuming no trends and when assuming only a drift. Moreover, the same amount of lags are chosen for all three variants. Below, the residuals and the autocorrelation functions of the residuals are plotted, in order to check if the number of lags chosen via BIC is satisfactory. 
+From the output it is apparent that BIC chooses 9 lags in the ADF test. Moreover, the value of the test-statistic clearly suggests that we cannot reject the null-hypothesis, since the value is much larger than the critical values for this left-sided test. Thus, we would conclude that the series is non-stationary. Note that the test leads to the same conclusion when assuming no trends and when assuming only a drift. Moreover, the same amount of lags were chosen automatically for all three variants. Below, the residuals and the autocorrelation functions of the residuals are plotted, in order to check if the number of lags chosen via BIC is satisfactory. 
 
-```{r}
+```{r, echo = F}
 plot(ixic.df)
 ```
 
 The autocorrelation function of the residuals has no significant coefficients, which leads us to conclude that the amount of lags chosen via BIC is satisfactory. 
 
-Next, we check if the returns (rendimientos) are stationary. Below we calculate the returns and remove the first difference, since it is not a numerical value. 
+Next, we check if the returns are stationary. Below we calculate the (logarithmic) returns. Note that the first difference is removed, since it is not a numerical value. 
 
 ```{r}
 rendixic <- diff(log(ixic))
-#r <- diff(log(IXIC))[-1]
 ```
 
-```{r}
+The returns are plotted below. 
+
+```{r, echo = F}
 tibble("date" = as.Date(Ixic[-c(1),1]), rendixic) %>% ggplot(aes(x = date, y = rendixic)) +
     geom_line() +
     theme_minimal() +
@@ -154,31 +165,29 @@ rendixic.df<-ur.df(rendixic, type = c("none"), lags=20, selectlags = c("BIC"))
 summary(rendixic.df)	
 ```
 
-It is apparent that 8 lags are chosen. Moreover, from the test-statistic above we would reject the null-hypothesis, which means that we have found evidence against the hypothesis that the returns are $I(1)$, i.e. evidence against the hypothesis that the original series is $I(0)$. Thus, we conclude that the returns are $I(0)$ or the original series is $I(1)$. This means that, through the results from this test, the original series is not stationary (which we have seen earlier), but the returns are stationary and can be used further in the analysis. SJEKK AT DET JEG SKRIVER HER STEMMER, TROR DET GJØR DET! HAR NOEN NOTATER FRA ET EKSEMPEL PÅ TAVLA PÅ DETTE!
+It is apparent that 8 lags are chosen. Moreover, from the test-statistic above we would reject the null-hypothesis, which means that we have found evidence against the hypothesis that the returns are $I(1)$. Thus, we conclude that the returns are $I(0)$ or, equivalently, the original series is $I(1)$. This means that the original series is not stationary according to this test as well, but the returns are stationary and can be used in the analysis. 
 
 As earlier, the plot below shows that the amount of lags for the ADF test chosen via BIC is satisfactory. 
 
-```{r}
+```{r, echo = F}
 plot(rendixic.df)
 ```
 
-For completeness, we also use the Philips-Perron (PP) test to check stationarity of the series. This test defines the same null-hypothesis as the ADF test, which means that this is a left-tailed test as well. 
-COULD MAKE A TABLE FROM THESE TWO LAST TESTS (WITH THE MOST IMPORTANT STATISTICS), TO SAVE SOME ROOM IF NEEDED, SINCE THE CONCLUSIONS ARE THE SAME AS EARLIER (AS EXPECTED).
+For completeness, we also use the Philips-Perron (PP) test to check stationarity of the series. This test defines the same null-hypothesis as the ADF test, which means that this also is a left-tailed test. The output from the code blocks below are not printed, as they yield the same results as the ADF test above. 
 
 ```{r}
 ixic.pp<-ur.pp(ixic, type = c("Z-tau"), model = c("trend"), lags = c("long"))
-summary(ixic.pp)	
 ```
 
-All combinations of trend assumptions and/or long or short lags yield the same conclusions as from the output above; namely that we have not found sufficient evidence to reject the null-hypothesis of non-stationarity of the series. Below the PP-test is done with the returns. 
+All combinations of trend assumptions and long or short lags yield the same conclusions; we have not found sufficient evidence to reject the null-hypothesis of non-stationarity of the series. Below the PP-test is done with the returns. 
+
 ```{r}
 rendixic.pp<-ur.pp(rendixic, type = c("Z-tau"), model = c("constant"), lags = c("short"))
-summary(rendixic.pp)	
 ```
 
 When referring to the returns, the conclusion is the same as for the ADF test; the returns are stationary while the original series is not. 
 
-Finally, we use the KPSS test to check stationarity of the series. The null hypothesis for this test states that the series is stationary. In the test below we have chosen to assume the deterministic component as a constant with a linear trend, and we have used short lags. Note that the conclusion is the same with all different variations of assumptions for the test. 
+Finally, we use the KPSS test to check stationarity of the series. The null hypothesis for this test states that the series is stationary. In the test below we have chosen to assume the deterministic component as a constant with a linear trend, and we have used short lags. Notice that the conclusion is the same with all different variations of assumptions for the test. 
 
 ```{r}
 ixic.kpss<-ur.kpss(ixic, type = c("tau"), lags = c("short"))
@@ -198,7 +207,7 @@ Conclusively, the original time series is not stationary, but the returns are st
 
 Some basic statistical properties of the stationary series, the returns, are shown below. 
 
-```{r}
+```{r, echo = F}
 basicStats(rendixic)
 ```
 
@@ -208,19 +217,19 @@ hist(rendixic,breaks=100,freq=F, main = 'Histogram of the Returns')
 curve(dnorm(x, mean=mean(rendixic), sd=sd(rendixic)), col=2, add=T)
 ```
 
-We can see that the series is Leptokurtic, both by the kurtosis value and from the histogram above. The superposed red curve is a Gaussian distribution with empirical mean and standard error according to the returns of the NASDAQ Composite series. Moreover, the skewness is negative, which means that the distribution of the returns are heavy-tailed in the left tail. This is also apparent from the histogram above. 
+It becomes apparent that the series is leptokurtic, both from the kurtosis value and from the histogram. The superposed red curve is a Gaussian distribution with empirical mean and standard error according to the returns of IXIC. Moreover, the skewness is negative, which means that the distribution of the returns is heavy-tailed in the left tail. This is also apparent from the histogram above. Without any further comments, the rest of the statistical properties may be interesting to have in mind. 
 
 ## Identification, Estimation and Diagnostics of a Model for the Mean
 
-Plotting the autocorrelation functions of the returns. 
+The autocorrelation functions of the returns are plotted below. 
 
-```{r}
+```{r, echo = F}
 par(mfrow=c(1,2),font=2,font.lab=4,font.axis=2,las=1)
 acf(rendixic,ylim=c(-1,1),main="rendixic")
 pacf(rendixic,ylim=c(-1,1),main="rendixic")
 ```
 
-Note that the third coefficient of both ACF and PACF seems to be non-significant, which might be a hint to what order of model would be fitting. Notice also that both the ACF and the PACF have significant coefficients after the third lag; 6, 7, 8 and 9 seem to be significant. An ARMA of order 6, 7, 8 or 9 seems like a too large order of model to estimate, so I will try with smaller models instead, noting that the third coefficient is non-significant. The table below shows the BIC and the AIC for different orders of ARMA-models. The largest model I have considered is ARMA(3,2) (or ARMA(2,3)), since an ARMA(3,3) yields NaNs in the estimates. 
+Note that the third coefficient of both ACF and PACF seems to be non-significant, which might be a hint to what order of model would be fitting. Notice also that both the ACF and the PACF have significant coefficients after the third lag; 6, 7, 8 and 9 seem to be significant. An ARMA of order 6, 7, 8 or 9 seems like a too large order of model to estimate, so we will try with smaller models instead, noting that the third coefficient is non-significant. The table below shows the BIC and the AIC for different orders of ARMA-models. The largest model that is considered is ARMA(3,2) (or ARMA(2,3)), since an ARMA(3,3) yields NaNs in the estimates. 
 
 ```{r, echo = F, results='hide'}
 #ar(1)
@@ -277,75 +286,96 @@ models <- c("AR(1)", "MA(1)", "ARMA(1,1)", "AR(2)", "MA(2)", "ARMA(2,2)", "AR(3)
 aics <- c(model$aic, model2$aic, model3$aic, model4$aic, model5$aic, model6$aic, model7$aic, model8$aic, model9$aic)
 bics <- c(BIC(model), BIC(model2), BIC(model3), BIC(model4), BIC(model5), BIC(model6), BIC(model7), BIC(model8), BIC(model9))
 df.arma <- cbind("Model" = models, "BIC" = bics, "AIC" = aics)
-knitr::kable(df.arma, caption = "AIC and BIC of different estimated models for the returns of NASDAQ Composite")
+knitr::kable(df.arma, caption = "AIC and BIC of different estimated models for the returns of IXIC")
 ```
 
-The table above clearly shows that ARMA(2,2) yields the lowest AIC and BIC. Moreover, as noted, the estimated coefficients of the model are significant to a level of $0.05$. The estimated model ARMA(2,2) is shown below
+The table above clearly shows that ARMA(2,2) yields the lowest AIC and BIC. The estimated model ARMA(2,2) is shown below
 
 ```{r}
-mean.model <- arima(rendixic, order = c(2,0,2),include.mean = TRUE)
-mean.model
+(mean.model <- arima(rendixic, order = c(2,0,2),include.mean = TRUE))
 pnorm(c(abs(mean.model$coef)/sqrt(diag(mean.model$var.coef))), mean=0, sd=1, lower.tail=FALSE)
+residuals <- mean.model$residuals
 ```
 
-Some model diagnostics have to be done to check if the model is adequate. We must check if the model is stationary. 
+Some model diagnostics have to be done to check if the model is adequate. We must check if the model is stationary. The inverse roots of the characteristic polynomial of AR and MA are plotted.
 
-```{r}
+```{r, echo = F}
 plot(mean.model)
 ```
 
-The inverse roots of the characteristic polynomial of AR and MA are shows above. DO WE WANT ALL OF THE INVERSE ROOTS TO FALL INSIDE, FOR BOTH THE AR AND THE MA PROCESS? The stationarity condition for the AR-process is satisfied, since the roots have absolute values greater than one. Moreover, the invertibility condition holds for the MA process, since the roots of this process also have absolute values greater than one. Thus, the model is stationary. 
+DO WE WANT ALL OF THE INVERSE ROOTS TO FALL INSIDE, FOR BOTH THE AR AND THE MA PROCESS? The stationarity condition for the AR-process is satisfied, since the roots have absolute values greater than one. Moreover, the invertibility condition holds for the MA process, since the roots of this process also have absolute values greater than one. Thus, the model is stationary. 
 
-The residuals of the model are analyzed below. 
+The residuals of the model are analyzed next. 
 
-```{r}
+```{r, echo = F}
 tsdiag(mean.model)
 ```
 
-There are no significant coefficients in the autocorrelation function above, which suggests that the model has adequately captured the information in the data. Moreover, the Ljung-Box statistic p-values are all relatively large, which means that we will not reject the Ljung-Box null hypothesis that all $m$ of the correlation coefficients are simultaneously equal to zero. Thus, this further suggests that the residuals are not correlated and we have found a model that seems reasonable in this regard. 
+There are no significant coefficients in the autocorrelation function, which suggests that the model has adequately captured the information in the data. Moreover, the Ljung-Box statistic $p$-values are all relatively large, which means that we will not reject the Ljung-Box null hypothesis. This further suggests that the residuals are not correlated and we have found a model that seems reasonable in this regard. 
 
-Next, a QQ-plot of the residuals, and the residuals themselves (not standardized), is plotted.
+Next, a QQ-plot of the theoretical normal quantiles, and the residuals themselves (not standardized), is plotted.
 
-```{r}
+```{r, echo = F}
 par(mfrow = c(1,1),font=2,font.lab=4,font.axis=2,las=1)
-qqnorm(mean.model$residuals)
-qqline(mean.model$residuals, datax = FALSE)
-
-plot(mean.model$residuals)
-title (main="Residuals")
-normalTest(mean.model$residuals,method="jb")
+qqnorm(residuals)
+qqline(residuals, datax = FALSE)
 ```
 
-It is apparent that the residuals have heavy tails. It is not reasonable to assume normality of the residuals, an argument that the Jarque-Bera Normality test further substantiates because its null hypothesis of normality is rejected following the very small p-value. 
+Also, the residuals of the estimated model are plotted. 
+
+```{r, echo = F}
+plot(residuals)
+title (main="Residuals")
+```
+
+The Jarque-Bera Normality test is also applied. 
+
+```{r}
+normalTest(residuals,method="jb")
+```
+
+It is apparent that the residuals have heavy tails. It is not reasonable to assume normality of the residuals, an argument that the Jarque-Bera Normality test further substantiates because its null hypothesis of normality is rejected following the very small $p$-value. 
 
 ## Identification, Estimation and Diagnostics of a Model for the Variance
 
 First we test for ARCH effects using the residuals of the mean model. 
 
 ```{r}
-residuals <- mean.model$residuals
 residuals2 <- residuals^2
+```
 
+```{r, echo = F}
 par(mfrow=c(1,2),font=2,font.lab=4,font.axis=2,las=1)
 acf(residuals2,ylim=c(-1,1),main="Squared Residuals") 
 pacf(residuals2,ylim=c(-1,1),main="Squared Residuals")
+```
+
+```{r, eval = T}
 par(mfrow=c(1,1))
 # Har acf ovenfor noe sammenheng med plottet nedenfor (se slides 33++ i Volatility Models)?
 # For de ser veldig like ut. Men vet ikke helt om residuals^2 fra modellen har noe med dette å gjøre?
 # Mulig det er fordi vi estimerer mean vha ARMA-modellen og trekker den fra + kvadrat, noe vi egt gjør direkte fra serien nedenfor!?
 acf((rendixic-mean(rendixic))^2, ylim = c(-1,1))
+```
 
+As seen in the ACF and PACF of the squared residuals, they are clearly presenting autocorrelation, i.e. there are ARCH effects present. 
+
+```{r}
 Box.test(residuals2,lag=1,type='Ljung')
+```
+
+```{r, eval = F}
 Box.test(residuals2,lag=5,type='Ljung')
 Box.test(residuals2,lag=15,type='Ljung')
 ```
 
-As seen in the ACF and PACF of the squared residuals, they are clearly presenting autocorrelation, i.e. there are ARCH effects present. This argument is further substantiated by the Ljung-Box tests above, since they lead to the conclusion that the squared residuals are correlated. Thus, it is relevant to identify and estimate a model for the volatility. Joint estimation of the mean and volatility equations, for different types of models, is done in the following. 
+The argument is further substantiated by the Ljung-Box tests, where only the first result is shown, since they all lead to the conclusion that the squared residuals are correlated. Thus, it is relevant to identify and estimate a model for the volatility. Joint estimation of the mean and volatility equations, for different types of models, is done in the following. 
 
-Now over to estimation of GARCH models for the variance of the returns. First we estimate a ARMA(2,2)-GARCH(1,1) with a t-student distribution. WHY CHOSE A T-STUDENT OVER A NORMAL (OR VICE VERSA)?
+Now over to estimation of GARCH models for the variance of the returns. First we estimate a ARMA(2,2)-GARCH(1,1) with a t-student distribution. WHY CHOOSE A T-STUDENT OVER A NORMAL (OR VICE VERSA)?
 
 ```{r}
-spec1 <- ugarchspec(variance.model = list(model = "sGARCH", garchOrder = c(1,1)), mean.model=list(armaOrder=c(2,2)), distribution.model = "std")
+spec1 <- ugarchspec(variance.model = list(model = "sGARCH", garchOrder = c(1,1)), 
+            mean.model=list(armaOrder=c(2,2)), distribution.model = "std")
 (m <- ugarchfit(spec = spec1, data = rendixic))
 m.AIC <- -6.4605
 ```
@@ -369,7 +399,8 @@ plot(m, which = 11)
 Next we will fit a ARMA(2,2)-GJR-GARCH(1,1) model, assuming a t-distribution. 
 
 ```{r}
-spec.mgjr <- ugarchspec(variance.model=list(model="gjrGARCH", garchOrder = c(1,1)), mean.model=list(armaOrder=c(2,2)), distribution.model = "std")
+spec.mgjr <- ugarchspec(variance.model=list(model="gjrGARCH", garchOrder = c(1,1)),
+                    mean.model=list(armaOrder=c(2,2)), distribution.model = "std")
 (mgjr <- ugarchfit(spec = spec.mgjr, data = rendixic))
 ```
 
@@ -395,7 +426,8 @@ The stationarity conditions holds, since $\hat{\alpha}_1 + \hat{\beta}_1 + \frac
 Next, we will fit an ARMA(2,2)-EGARCH model. 
  
 ```{r}
-spec.egarch <- ugarchspec(variance.model = list(model="eGARCH", garchOrder = c(1,1)), mean.model = list(armaOrder=c(2,2)), distribution.model = "std")
+spec.egarch <- ugarchspec(variance.model = list(model="eGARCH", garchOrder = c(1,1)), 
+                    mean.model = list(armaOrder=c(2,2)), distribution.model = "std")
 (m.egarch <- ugarchfit(spec = spec.egarch, data = rendixic))
 m.egarch.AIC <- -6.4958
 ```
@@ -429,7 +461,7 @@ plot(m.igarch, which = 11)
 
 Thus, I would conclude that the best model out of the three fitted is the EGARCH based model. 
 
-# Grafic and Interpretation of the Estimated Series of Volatility
+## Grafic and Interpretation of the Estimated Series of Volatility
 
 The estimated (anualized) series of volatility for the ARMA(2,2)-EGARCH model is shown below, together with the returns. 
 
@@ -474,7 +506,7 @@ legend("topleft", c("returnsabs","v"), lty=c(1,1), col=c("black","red"), cex=0.6
 
 THESE ARE ALL JUST DIFFERENT WAYS OF SEEING THE SAME RESULTS, REMOVE SOME OF THEM LATER!
 
-# Grafic and Interpretation of the News Impact Curve
+## Grafic and Interpretation of the News Impact Curve
 
 The news impact curve for our chosen model is shown below. Since the standard GARCH model does not take the leverage effect into effect, the news impact curve is symmetric. 
 
@@ -488,7 +520,7 @@ plot(ni$zx, ni$zy, ylab=ni$yexpr, xlab=ni$xexpr, type="l", main = "News Impact C
 
 The EGARCH based model takes the leverage effect into effect, which is the news impact curve is non-symmetric. This curve indicates that the volatility is impacted to a higher degree by negative news compared to the impact on the volatility following positive news, which seems to be increasingly small as the positivity of the news increases THIS IS VERY STRANGE!!
 
-# Volatility Predictions and Interpretations
+## Volatility Predictions and Interpretations
 
 Below volatility are predicted while leaving out the last 10 observations when estimating the ARMA(2,2)-EGARCH model. The prediction is done 10 steps ahead into the future, first statically. 
 
@@ -535,7 +567,7 @@ plot(forc3, which = 2)
 plot(forc3, which = 4)
 ```
 
-# Calculations via Historical Volatility and EWMA
+## Calculations via Historical Volatility and EWMA
 
 Historical volatility is calculated below. The historical volatility has been calculated using Simple Moving Average (SMA) over different time periods
 
@@ -623,7 +655,7 @@ axis(1, at=1:6)#, labels=c(2012, 2014, 2016, 2018, 2020, 2022))
 
 NOTE THAT THE TIMES ON THE X-AXIS ARE FUCKED UP. TRY TO FIX THIS LATER!
 
-# Calculation and Interpretation of VaR 
+## Calculation and Interpretation of VaR 
 
 Here we will calculate and interpret the Value at Risk (VaR) using estimated volatilities from several different models. First we use the variance-covariance method, calculating the VaR with a static forecast 1 ahead, using the EGARCH model. Remember that this was the first type of forecast we did in section 6. 
 
@@ -723,7 +755,9 @@ sum(rendibex < var1.gjrgarch)/length(rendibex) # fraction of sample where loss e
 
 HVORFOR IKKE FORECASTS SOM BLIR BRUKT HER?
 
-# Multivariate DCC GARCH
+# Multivariate Analysis
+
+## Multivariate DCC GARCH
 
 In order to solve this problem I have chosen the stock of Stratus Properties Inc. (STRS), which is one of the [top 30 components](https://finance.yahoo.com/quote/%5EIXIC/components?p=%5EIXIC) of the NASDAQ Composite Index. Similarly to the IXIC-data, this data has been downloaded in a csv-file directly from the Yahoo Finance website. The adjusted close of the time series is plotted below. 
 
@@ -932,7 +966,7 @@ dcc.garch11.spec <- dccspec(uspec = multispec(c(spec1, spec2)), dccOrder = c(1,1
 
 WHAT ASSUMPTIONS NEED TO BE FULFILLED FOR THIS MODEL!?
 
-# Estimated Correlation and News Impact Surface
+## Estimated Correlation and News Impact Surface
 
 The plot below shows the conditional standard error estimated from the model (in blue) and the realized absolute returns (in grey). 
 
@@ -984,6 +1018,9 @@ STEMMER DET AT DET ER KORRELASJONEN SOM ENDRES I NEWS IMPACT CURVE OVER, OG IKKE
 
 # QUESTIONS FOR PROFE: 
 
+* Generelt: Er hun interessert i å se kode i rapporten, eller bare resulater med diskusjon? Hvor mye av output fra tester etc kan sløyfes?
+* Correct to talk about returns, when they are calculated as diff(log(IXIC))?
+* Spør om ekstra plot under 3.5!?
+* In GARCH models: WHY CHOOSE A T-STUDENT OVER A NORMAL (OR VICE VERSA)?
 * Positivity and stationarity assumptions for EGARCH? Looks like positivity is not needed! But is stationarity an assumption that needs to be fulfilled in the model?
 * GÅ GJENNOM OPPGAVEN FOR Å FINNE FLERE SPØRSMÅL!
-
